fixed the damn menu gap

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 .banner img {
     width: 100%;
-    margin: 0px;
+    display: table;
 }
 .content img {
     margin-top: 50px;
